--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,9 +16,14 @@
 
 html, body {
     width: 100%;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
+    overflow-y: auto !important;
     margin: 0;
     padding: 0;
+    position: relative !important;
+    height: auto !important;
+    min-height: 100vh !important;
+    -webkit-overflow-scrolling: touch !important;
 }
 
 body {
