--- a/css/main.css
+++ b/css/main.css
@@ -1541,15 +1541,15 @@ img {
 
   .slider-track {
     display: flex;
-    width: 400%; /* 4 slides = 400% */
-    height: 100%;
+    width: 100%;
     transition: transform 0.4s ease;
     will-change: transform;
   }
 
   /* Slides des jeux - Mobile : slider */
   .jeu-slide {
-    width: 25%; /* Chaque slide prend 1/4 de la largeur totale */
+    width: 100%;
+    min-width: 100%;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
